--- a/poker-webapp/src/main/webapp/views/Table.view.xml
+++ b/poker-webapp/src/main/webapp/views/Table.view.xml
@@ -2,6 +2,12 @@
     xmlns:l="sap.ui.layout" xmlns:core="sap.ui.core" xmlns="sap.m">
     <Page title="Table">
         <content>
+            <HBox>
+                <Input id="nameInputField" placeholder="Name"></Input>
+                <Button id="joinButton" text="Join Table" press="joinTable"></Button>
+            </HBox>
+            <Button id="startButton" text="Start Game" press="startGame"></Button>
+            
             <List id="players" items="{/players}"
                 includeItemInSelection="true">
                 <headerToolbar>
@@ -15,6 +21,10 @@
                     iconDensityAware="false" iconInset="false" press="handlePress"
                     detailPress="handleDetailPress" />
             </List>
+
+            <TileContainer id="cards" tiles="{/cards}">
+                <StandardTile title="{suit}" number="{kind}" />
+            </TileContainer>
         </content>
     </Page>
 </mvc:View>
