--- a/poker-webapp/src/main/webapp/views/Table.view.xml
+++ b/poker-webapp/src/main/webapp/views/Table.view.xml
@@ -1,35 +1,40 @@
 <mvc:View controllerName="poker.controllers.Table" xmlns:mvc="sap.ui.core.mvc"
-    xmlns:l="sap.ui.layout" xmlns:core="sap.ui.core" xmlns="sap.m">
-    <Page title="Table">
-        <content>
-            <HBox>
-                <Input id="nameInputField" placeholder="Name"></Input>
-                <Button id="joinButton" text="Join Table" press="joinTable"></Button>
-            </HBox>
-            <Button id="startButton" text="Start Game" press="startGame"></Button>
-            
-            <List id="players" items="{/players}"
-                includeItemInSelection="true">
-                <headerToolbar>
-                    <Toolbar>
-                        <content>
-                            <Title text="Table Players" level="H2" />
-                        </content>
-                    </Toolbar>
-                </headerToolbar>
-                <StandardListItem title="{name}"
-                    iconDensityAware="false" iconInset="false" press="handlePress"
-                    detailPress="handleDetailPress" />
-            </List>
+	xmlns:l="sap.ui.layout" xmlns:core="sap.ui.core" xmlns="sap.m">
+	<Page title="Table">
+		<content>
+			<HBox>
+				<Input id="nameInputField" placeholder="Name"></Input>
+				<Button id="joinButton" text="Join Table" press="joinTable"></Button>
+			</HBox>
+			<Button id="startButton" text="Start Game" press="startGame"></Button>
 
-            <HBox>
-                <Input id="valueInputField" placeholder="value"></Input>
-                <Button id="betButton" text="Bet" press="placeBet"></Button>
-            </HBox>
+			<List id="players" items="{/players}" includeItemInSelection="true">
+				<headerToolbar>
+					<Toolbar>
+						<content>
+							<Title text="Table Players" level="H2" />
+						</content>
+					</Toolbar>
+				</headerToolbar>
+				<StandardListItem title="{name}" description="{bet}"
+					iconDensityAware="false" iconInset="false" press="handlePress"
+					detailPress="handleDetailPress" />
+			</List>
 
-            <TileContainer id="cards" tiles="{/cards}">
-                <StandardTile title="{suit}" number="{kind}" />
-            </TileContainer>
-        </content>
-    </Page>
+			<Text id="currentPlayer" text="{/currentPlayer}"></Text>
+
+			<HBox>
+				<Input id="valueInputField" placeholder="value"></Input>
+				<Button id="betButton" text="Bet" press="placeBet"></Button>
+			</HBox>
+
+			<TileContainer id="communityCards" tiles="{/communityCards}">
+				<StandardTile title="{suit}" number="{kind}" />
+			</TileContainer>
+			
+			<TileContainer id="cards" tiles="{/cards}">
+				<StandardTile title="{suit}" number="{kind}" />
+			</TileContainer>
+		</content>
+	</Page>
 </mvc:View>
