fixed one failing test

--- a/poker-webapp/src/main/webapp/views/Table.view.xml
+++ b/poker-webapp/src/main/webapp/views/Table.view.xml
@@ -13,7 +13,8 @@
 
         <content>
 
-            <Text id="currentPlayer" text="Current Player: {/currentPlayer}"></Text>
+            <Text text="Current Player: "></Text>
+            <Text id="currentPlayer" text="{/currentPlayer}"></Text>
 
             <List id="players" items="{/players}"
                 includeItemInSelection="true">
