show current player and revise OPA5 tests

--- a/poker-webapp/src/main/webapp/views/Lobby.view.xml
+++ b/poker-webapp/src/main/webapp/views/Lobby.view.xml
@@ -4,7 +4,7 @@
         <content>
             <Input id="player1" placeholder="Player 1"></Input>
             <Input id="player2" placeholder="Player 2"></Input>
-            <Button id="startButton" text="Start Game" press="startGame"></Button>
+            <Button id="start" text="Start Game" press="startGame"></Button>
         </content>
     </Page>
 </mvc:View>
