--- a/poker-webapp/src/main/webapp/views/Table.view.xml
+++ b/poker-webapp/src/main/webapp/views/Table.view.xml
@@ -2,43 +2,30 @@
     xmlns:l="sap.ui.layout" xmlns:core="sap.ui.core" xmlns:poker="poker.controls" xmlns="sap.m">
     <Page title="Table">
         <content>
-
-            <List id="players" items="{/players}"
-                includeItemInSelection="true">
+            <List id="players" items="{/players}">
                 <headerToolbar>
                     <Toolbar>
                         <content>
-                            <Title text="Table Players" level="H2" />
+                            <Title text="Players" />
                         </content>
                     </Toolbar>
                 </headerToolbar>
-                <StandardListItem title="{name}"
-                    counter="{bet}" />
+                <StandardListItem title="{name}" counter="{bet}" />
             </List>
 
             <Panel headerText="Your Cards">
                 <content>
                     <l:HorizontalLayout id="playerCards" content="{/playerCards}">
-                        <poker:Card kind="{kind}"
-                            suit="{suit}">
-                        </poker:Card>
+                        <poker:Card kind="{kind}" suit="{suit}" />
                     </l:HorizontalLayout>
-
                 </content>
             </Panel>
 
             <Panel headerText="Community Cards">
                 <content>
                     <l:HorizontalLayout id="communityCards" content="{/communityCards}">
-                        <poker:Card kind="{kind}"
-                            suit="{suit}">
-                        </poker:Card>
+                        <poker:Card kind="{kind}" suit="{suit}" />
                     </l:HorizontalLayout>
-<!--                     <l:Grid id="communityCards" content="{/communityCards}"> -->
-<!--                         <poker:Card kind="{kind}" -->
-<!--                             suit="{suit}"> -->
-<!--                         </poker:Card> -->
-<!--                     </l:Grid> -->
                 </content>
             </Panel>
         </content>
