--- a/poker-webapp/src/main/webapp/views/Table.view.xml
+++ b/poker-webapp/src/main/webapp/views/Table.view.xml
@@ -35,9 +35,9 @@
                 <Input id="amount" width="6em" placeholder="amount" />
                 <Button id="bet" text="Bet" press="placeBet" />
                 <ToolbarSpacer />
-                <Button id="call" text="Call" press="placeBet" />
-                <Button id="check" text="Check" press="placeBet" />
-                <Button id="fold" text="Fold" press="placeBet" />
+                <Button id="call" text="Call" />
+                <Button id="check" text="Check" />
+                <Button id="fold" text="Fold" />
             </Toolbar>
         </footer>
     </Page>
