--- a/poker-webapp/src/main/webapp/views/Table.view.xml
+++ b/poker-webapp/src/main/webapp/views/Table.view.xml
@@ -32,7 +32,7 @@
 
         <footer>
             <Toolbar>
-                <Button id="raise" text="Raise to" press="placeBet" type="Accept" />
+                <Button id="raise" text="Raise to" press="raiseTo" type="Accept" />
                 <Input id="amount" width="5em" placeholder="amount" />
                 <ToolbarSpacer />
                 <Button id="check" text="Check" press="check" type="Accept" />
