local test index.html and proper multi-user-support

--- a/src/main/webapp/views/Table.view.xml
+++ b/src/main/webapp/views/Table.view.xml
@@ -31,7 +31,7 @@
         </content>
 
         <footer>
-            <Toolbar>
+            <Toolbar id="toolbar">
                 <Button id="raise" text="Raise to" press="raiseTo" type="Accept" />
                 <Input id="amount" width="5em" placeholder="amount" />
                 <ToolbarSpacer />
