--- a/src/main/resources/static/table/view/App.view.xml
+++ b/src/main/resources/static/table/view/App.view.xml
@@ -4,6 +4,7 @@
       <Page title="{i18n>Title}" floatingFooter="true" enableScrolling="false">
         <headerContent>
           <OverflowToolbar>
+            <Button type="Accept" text="{i18n>Start}" visible="{/start/visible}" enabled="{/start/enabled}" press="start" />
             <ToolbarSpacer />
             <core:Icon src="sap-icon://person-placeholder" />
             <Text text="{/player/name}" />
@@ -71,9 +72,11 @@
               <uxap:ObjectPageSection title="{i18n>CommunityCards}" titleUppercase="false">
                 <uxap:subSections>
                   <uxap:ObjectPageSubSection>
-                    <HBox items="{/communityCards}" class="playingCards">
-                      <controls:Card suit="{suit}" rank="{rank}" />
-                    </HBox>
+                    <VBox>
+                      <HBox items="{/communityCards}" class="playingCards">
+                        <controls:Card suit="{suit}" rank="{rank}" />
+                      </HBox>
+                    </VBox>
                   </uxap:ObjectPageSubSection>
                 </uxap:subSections>
               </uxap:ObjectPageSection>
@@ -86,17 +89,29 @@
                   </uxap:ObjectPageSubSection>
                 </uxap:subSections>
               </uxap:ObjectPageSection>
+              <uxap:ObjectPageSection title="{i18n>Winner}" titleUppercase="false" visible="{= ${/winner} !== null }">
+                <uxap:subSections>
+                  <uxap:ObjectPageSubSection>
+                    <VBox>
+                      <ObjectStatus class="sapUiSmallMarginBottom" text="{/winner/name}" icon="sap-icon://information" state="Information" />
+                      <HBox items="{/winnerHand}" class="playingCards">
+                        <controls:Card suit="{suit}" rank="{rank}" />
+                      </HBox>
+                    </VBox>
+                  </uxap:ObjectPageSubSection>
+                </uxap:subSections>
+              </uxap:ObjectPageSection>
             </uxap:sections>
           </uxap:ObjectPageLayout>
         </content>
         <footer>
           <OverflowToolbar>
-            <Button id="raise" text="{i18n>Raise}" enabled="{/enabled}" press=".action('raise', ${path: '/amount', formatter: 'parseInt'})" type="Attention" />
-            <Input id="amount" enabled="{/enabled}" width="5em" placeholder="{i18n>Amount}" value="{/amount}" />
+            <Button id="raise" text="{i18n>Raise}" enabled="{/actions/enabled}" press=".action('raise', ${path: '/amount', formatter: 'parseInt'})" type="Attention" />
+            <Input id="amount" enabled="{/actions/enabled}" width="5em" placeholder="{i18n>Amount}" value="{/amount}" />
             <ToolbarSpacer />
-            <Button id="check" enabled="{/enabled}" text="{i18n>Check}" press=".action('check')" type="Ghost" />
-            <Button id="call" enabled="{/enabled}" text="{i18n>Call}" press=".action('call')" type="Emphasized" />
-            <Button id="fold" enabled="{/enabled}" text="{i18n>Fold}" press=".action('fold')" type="Reject" />
+            <Button id="check" enabled="{/actions/enabled}" text="{i18n>Check}" press=".action('check')" type="Ghost" />
+            <Button id="call" enabled="{/actions/enabled}" text="{i18n>Call}" press=".action('call')" type="Emphasized" />
+            <Button id="fold" enabled="{/actions/enabled}" text="{i18n>Fold}" press=".action('fold')" type="Reject" />
           </OverflowToolbar>
         </footer>
       </Page>
